src/components/TextSection/textSection.scss
@import '~/sass/global';

.text-section {
  &:not(:last-child) {
    margin: 0 0 $spacer-l 0;
  }

  &--right {
    text-align: right;
  }

  &__heading {
    margin: 0 0 $spacer-m 0;

    &--large-spacing {
      margin: 0 0 to-rem(70) 0;
    }
  }

  &__content {
    color: $charcoal-400;
    font-size: $paragraph-l;
    margin: 0;

    &--bold {
      font-weight: $font-bold;
    }

    p {
      font-weight: inherit;
      margin: inherit;
    }

    ul {
      list-style-type: '\25cf';
      margin: inherit;
      padding-left: to-rem(10);
    }

    li {
      padding-left: to-rem(16);

      &::marker {
        color: var(--primary-color);
      }

      &:not(:last-child) {
        margin-bottom: to-rem(5);
      }
    }
  }

  &__button-wrapper {
    margin: $spacer-xxxl 0 0 0;
  }
}

